<resources>
    <string name="ASED">ASED</string>
    <string name="category_text" translatable="false">Категории</string>
    <string name="favorite_text">Избранное</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="burger_item_category">"Бургеры"</string>
    <string name="item_category_description">Рецепты всех\nпопулярных видов\nбургеров</string>
    <string name="layout_category">Категории</string>
    <string name="category_image">Category image</string>
    <string name="category_image_content_description">%1$s сategory image</string>
    <string name="burgers_recipes">Burger recipes</string>
    <string name="image_recipe_card">Image recipt card</string>
    <string name="recycle_view">Recycle view</string>
    <string name="recipe_image_description">Изображение рецепта</string>
    <string name="recipe_image_content_description">%1$s сategory image</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="cooking_type">Способ приготовления</string>
    <string name="portions">Порции:</string>
    <string name="imageButtonFavorite">Добавить в избранное </string>
    <string name="favorites">Избранное</string>
    <string name="hide_text">Вы еще не добавили ни одного рецепта в избранное</string>
</resources>