<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/category_item_height">

            <ImageView
                android:id="@+id/ivRecipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/recipe_image_description"
                android:scaleType="centerCrop"
                android:src="@drawable/bcg_recipe" />

            <ImageButton
                android:contentDescription="@string/imageButtonFavorite"
                android:id="@+id/ibFavorite"
                android:layout_width="@dimen/favorite_button"
                android:layout_height="@dimen/favorite_button"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:foreground="?attr/selectableItemBackground"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_heart_empty"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRecipe"
                style="@style/StyleMainTitle20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_16"
                android:layout_marginBottom="@dimen/spacing_16"
                android:background="@drawable/shape_text_view"
                android:text="@string/category_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/spacing_16"
            android:background="@color/backgroundСolor"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFragmentRecipeIngredients"
                style="@style/Title20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_16"
                android:text="@string/ingredients" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvFragmentRecipe"
                    style="@style/Portions_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_6"
                    android:text="@string/portions"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvFragmentRecipeNumber"
                    style="@style/Portions_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/spacing_6"
                    app:layout_constraintBottom_toBottomOf="@+id/tvFragmentRecipe"
                    app:layout_constraintStart_toEndOf="@+id/tvFragmentRecipe"
                    tools:text="1" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <SeekBar
                android:id="@+id/sbFragmentRecipe"
                style="@style/styleSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_4"
                android:max="5"
                android:min="1"
                android:padding="@dimen/spacing_8"
                android:progress="1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_text_view_white"
                android:padding="@dimen/spacing_4"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="10"
                tools:listitem="@layout/item_ingredient" />

            <TextView
                style="@style/Title20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/spacing_16"
                android:text="@string/cooking_type" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_text_view_white"
                android:padding="@dimen/spacing_4"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="10"
                tools:listitem="@layout/item_method" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>